# crystal

./: Cargo.toml
core/auth/: Cargo.toml
core/auth/src/: lib.rs
core/chain/: Cargo.toml
core/chain/src/: lib.rs
core/json-rpc/: Cargo.toml
core/json-rpc/src/: jsonrpc.rs  lib.rs  server.rs  signer.rs
crystal-node/: Cargo.toml
crystal-node/src/: main.rs  rpc.rs  service.rs
libs/db/: Cargo.toml
libs/db/src/: lib.rs  memorydb.rs
libs/evm/: Cargo.toml
libs/evm-nogas/: Cargo.toml
libs/evm-nogas/src/: executive.rs  lib.rs
libs/evm-nogas/src/backend/: backend.rs  mod.rs  stack.rs
libs/evm-nogas/src/executor/stack/: executor.rs
libs/evm/src/: account.rs  backend.rs  key_mapping.rs  lib.rs  stack.rs
libs/hashing/: Cargo.toml
libs/hashing/src/: lib.rs
libs/message/: Cargo.toml
libs/message/src/: lib.rs
libs/proto/: Cargo.toml  README.md  create_protobuf.sh
libs/proto/proto/: blockchain.proto  communication.proto
libs/proto/src/: lib.rs
libs/proto/src/protos/: blockchain.rs  communication.rs  consensus.rs  mod.rs
libs/result/: Cargo.toml
libs/rpc-core/: Cargo.toml
libs/rpc-core/src/: eth.rs  lib.rs
libs/rpc-core/src/types/: block.rs  block_number.rs  bytes.rs  call_request.rs  index.rs  log.rs  mod.rs  receipt.rs  transaction.rs  transaction_request.rs
libs/storage/: Cargo.toml
libs/storage/src/: generator.rs
libs/txpool/: Cargo.toml
libs/txpool/src/: lib.rs  txpool.rs
