[package]
name = "crystal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm = "0.37.0"
# pallet-evm = "5.0.0"
ed25519-dalek = { version = "1.0.0", default-features = false, features = ["alloc", "u64_backend"] }
ethereum-types = "0.14.0"
rocksdb = "0.19.0"
