[package]
name = "json-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
rpc-core = { path = "../../libs/rpc-core"}
ethereum-types = "0.14.1"
