[package]
name = "evm-nogas"
version = "0.1.0"
license = "Apache-2.0"
authors = ["tiannian <dtiannian@gmail.com>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine without gas"
repository = "https://github.com/tiannian/evm-nogas"
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
evm-core = { version = "0.37.0", default-features = false }
evm-runtime = { version = "0.37.0", default-features = false }
sha3 = { version = "0.10.6", default-features = false }
rlp = { version = "0.5", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["rlp"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
ethereum = { version = "0.14.0", default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"], optional = true }
auto_impl = "1.0.1"
ethereum-types = "0.14.0"

anyhow = "1.0.66"
thiserror = "1.0.37"

storage = { path = "../storage"}
hashing = { path = "../hashing"}
kvdb = "0.13.0"
kvdb-rocksdb = "0.17.0"

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
#[features]
#with-codec = ["codec", "scale-info", "evm-core/with-codec", "primitive-types/codec", "primitive-types/scale-info", "ethereum/with-codec"]
#with-serde = ["serde", "evm-core/with-serde", "primitive-types/serde", "ethereum/with-serde"]


[dev-dependencies]
kvdb-memorydb = "0.13.0"