[package]
name = "evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#evm = "0.37.0"
evm = { version = "0.37.0", default-features = false, features = ["with-codec"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

# Parity
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
primitive-types = { version = "0.12.1", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.5", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }