[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
protobuf = { version = "3.2.0", features = ["with-bytes"]}
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
