[package]
name = "rpc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum = { version = "0.14.0", features = ["with-codec", "with-serde"] }
ethereum-types = "0.14.1"
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"